# ai-shorts-engine

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  README.md  SETUP.md  alembic.ini  docker-compose.yml  extract_frames.py  gemini_image.py  generate_image_video.py  generate_video.py  hybrid_pipeline.py  hybrid_rome.py  make_candle_video.py  make_car_short.py  make_car_video.py  make_listicle_video.py  make_moatifi_money.py  make_rr_fixed_final.py  make_rr_fixed_final_normal.py  make_rr_heygen.py  make_specific_car.py  make_tooth_short.py  openapi_tmp.json  post_process.py  post_rr_all_platforms.py  post_rr_instagram.py  pyproject.toml  qa_calibrate.py  render_simple.py  research_cli.py  resume_hybrid.py  resume_rome.py  resume_viral_cat.py  run_car_hidden_weakspot.py  run_moatifi_listicle.py  run_moatifi_short.py  (+27 more)
docs/: clarynt-quality-benchmark.md  learning-loop.md  manifest-bridge-recon.md  platform-compliance.md  runbook-learning-loop.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_video_pipeline.py  0003_platform_accounts.py  0004_analytics_ingestion.py  0005_learning_loop.py  0006_platform_multi_dest.py  0007_qa_monitoring.py  0008_ralph_loop.py  0009_stories.py  0010_final_video_critique.py
scripts/: generate_brainrot_pivot_video.py  generate_bunny_brainrot_3s_music_fix.py  generate_bunny_brainrot_pivot_gemini.py  generate_gemini_tts_hook_sample.py  generate_munger_talking_candle_video.py  generate_seedance_sample.py  generate_veo_hook_default_stack.py  generate_veo_hook_sample.py  run_story_voiceover_e2e.py  test_api_connections.py  test_story_voiceover_flow.py
src/: .env.example
src/shorts_engine/: __init__.py  cli.py  config.py  logging.py  main.py  worker.py
storage/: concat.txt
storage/research/: last_llm_response.json  latest_signals.json  research_2026-02-23_213735.json  research_2026-02-23_213919.json  (+2 more)
tests/: __init__.py  conftest.py  test_adapters.py  test_approved_preview_renderer.py  test_creatomate_payload.py  test_domain.py  test_first_frame_review_payload.py  test_footage_preview_builder.py  test_generate_video_provider_config.py  test_health.py  test_jobs.py  test_kling_provider.py  test_manifest_bridge.py  test_moviepy_renderer.py  test_ref_pack_generator.py  test_render_pipeline.py  test_seedance_provider.py  test_shot_generation_runner.py  test_shot_plan_approvals.py  test_shot_plan_compiler.py  test_shot_plan_pipeline.py  test_story_generator.py  test_storyboard_smoke.py  test_voiceover.py  test_youtube_publish.py
(+133 files in other folders)
